--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 	<title></title>
+	<style type="text/CSS">
+		body{background-color: #00ff88;}
 	</head>
 <body>
 	<h1>Hello Word!</h1>
